src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from d:\Ki222\PPL\BTL2\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'integer'", "'string'", "'boolean'", 
                     "'float'", "'array'", "'break'", "'do'", "'else'", 
                     "'for'", "'function'", "'if'", "'return'", "'while'", 
                     "'void'", "'out'", "'continue'", "'of'", "'inherit'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'::'", 
                     "'('", "')'", "'['", "']'", "'.'", "','", "';'", "':'", 
                     "'{'", "'}'", "'='" ]

    symbolicNames = [ "<INVALID>", "AUTO", "INT", "STRING", "BOOL", "FLOAT", 
                      "ARR", "BREAK", "DO", "ELSE", "FOR", "FUNCTION", "IF", 
                      "RETURN", "WHILE", "VOID", "OUT", "CONTINUE", "OF", 
                      "INHERIT", "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", 
                      "AND", "OR", "EQUAL", "DIF", "LESS", "BIGGER", "LESSEQUAL", 
                      "MOREEQUAL", "CONCAT", "LRB", "RRB", "LSB", "RSB", 
                      "POINT", "CM", "SM", "CL", "LPB", "RPB", "EQB", "COMMENT", 
                      "COMMENTS", "BOOLEAN", "IDENTIFIER", "INTEGER", "FLOATLITERAL", 
                      "STRINGLITERAL", "WS", "ERROR_TOKEN", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_trang = 1
    RULE_decVar = 2
    RULE_decVar1 = 3
    RULE_typeAssign = 4
    RULE_dimen = 5
    RULE_elementType = 6
    RULE_decVar2 = 7
    RULE_varList = 8
    RULE_func = 9
    RULE_decFunc = 10
    RULE_parameter = 11
    RULE_bodyFunction = 12
    RULE_stmt = 13
    RULE_blockStmt = 14
    RULE_stmtList = 15
    RULE_assignStmt = 16
    RULE_ifStmt = 17
    RULE_elseStmt = 18
    RULE_elseIfStmt = 19
    RULE_forStmt = 20
    RULE_whileStmt = 21
    RULE_doWhileStmt = 22
    RULE_continueStmt = 23
    RULE_breakStmt = 24
    RULE_callStmt = 25
    RULE_returnStmt = 26
    RULE_expr = 27
    RULE_expr0 = 28
    RULE_expr1 = 29
    RULE_expr2 = 30
    RULE_expr3 = 31
    RULE_expr4 = 32
    RULE_expr5 = 33
    RULE_expr6 = 34
    RULE_expr7 = 35
    RULE_expr8 = 36
    RULE_literal = 37
    RULE_array = 38
    RULE_literals = 39
    RULE_relationOp = 40
    RULE_logicalOp = 41
    RULE_addingOp = 42
    RULE_muldivOp = 43
    RULE_signOp = 44
    RULE_indexArray = 45
    RULE_funcCall = 46
    RULE_exprList = 47

    ruleNames =  [ "program", "trang", "decVar", "decVar1", "typeAssign", 
                   "dimen", "elementType", "decVar2", "varList", "func", 
                   "decFunc", "parameter", "bodyFunction", "stmt", "blockStmt", 
                   "stmtList", "assignStmt", "ifStmt", "elseStmt", "elseIfStmt", 
                   "forStmt", "whileStmt", "doWhileStmt", "continueStmt", 
                   "breakStmt", "callStmt", "returnStmt", "expr", "expr0", 
                   "expr1", "expr2", "expr3", "expr4", "expr5", "expr6", 
                   "expr7", "expr8", "literal", "array", "literals", "relationOp", 
                   "logicalOp", "addingOp", "muldivOp", "signOp", "indexArray", 
                   "funcCall", "exprList" ]

    EOF = Token.EOF
    AUTO=1
    INT=2
    STRING=3
    BOOL=4
    FLOAT=5
    ARR=6
    BREAK=7
    DO=8
    ELSE=9
    FOR=10
    FUNCTION=11
    IF=12
    RETURN=13
    WHILE=14
    VOID=15
    OUT=16
    CONTINUE=17
    OF=18
    INHERIT=19
    ADD=20
    SUB=21
    MUL=22
    DIV=23
    MOD=24
    NOT=25
    AND=26
    OR=27
    EQUAL=28
    DIF=29
    LESS=30
    BIGGER=31
    LESSEQUAL=32
    MOREEQUAL=33
    CONCAT=34
    LRB=35
    RRB=36
    LSB=37
    RSB=38
    POINT=39
    CM=40
    SM=41
    CL=42
    LPB=43
    RPB=44
    EQB=45
    COMMENT=46
    COMMENTS=47
    BOOLEAN=48
    IDENTIFIER=49
    INTEGER=50
    FLOATLITERAL=51
    STRINGLITERAL=52
    WS=53
    ERROR_TOKEN=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def trang(self):
            return self.getTypedRuleContext(MT22Parser.TrangContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.trang()
            self.state = 97
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TrangContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def trang(self):
            return self.getTypedRuleContext(MT22Parser.TrangContext,0)


        def decVar(self):
            return self.getTypedRuleContext(MT22Parser.DecVarContext,0)


        def func(self):
            return self.getTypedRuleContext(MT22Parser.FuncContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_trang




    def trang(self):

        localctx = MT22Parser.TrangContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_trang)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 99
                    self.decVar()
                    pass

                elif la_ == 2:
                    self.state = 100
                    self.func()
                    pass


                self.state = 103
                self.trang()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 105
                    self.decVar()
                    pass

                elif la_ == 2:
                    self.state = 106
                    self.func()
                    pass


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecVarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SM(self):
            return self.getToken(MT22Parser.SM, 0)

        def decVar1(self):
            return self.getTypedRuleContext(MT22Parser.DecVar1Context,0)


        def decVar2(self):
            return self.getTypedRuleContext(MT22Parser.DecVar2Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decVar




    def decVar(self):

        localctx = MT22Parser.DecVarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decVar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 111
                self.decVar1()
                pass

            elif la_ == 2:
                self.state = 112
                self.decVar2()
                pass


            self.state = 115
            self.match(MT22Parser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecVar1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def typeAssign(self):
            return self.getTypedRuleContext(MT22Parser.TypeAssignContext,0)


        def EQB(self):
            return self.getToken(MT22Parser.EQB, 0)

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.CM)
            else:
                return self.getToken(MT22Parser.CM, i)

        def decVar1(self):
            return self.getTypedRuleContext(MT22Parser.DecVar1Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decVar1




    def decVar1(self):

        localctx = MT22Parser.DecVar1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decVar1)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(MT22Parser.IDENTIFIER)
                self.state = 118
                self.match(MT22Parser.CL)
                self.state = 119
                self.typeAssign()
                self.state = 120
                self.match(MT22Parser.EQB)
                self.state = 121
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(MT22Parser.IDENTIFIER)
                self.state = 124
                self.match(MT22Parser.CM)
                self.state = 125
                self.decVar1()
                self.state = 126
                self.match(MT22Parser.CM)
                self.state = 127
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elementType(self):
            return self.getTypedRuleContext(MT22Parser.ElementTypeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def ARR(self):
            return self.getToken(MT22Parser.ARR, 0)

        def dimen(self):
            return self.getTypedRuleContext(MT22Parser.DimenContext,0)


        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_typeAssign




    def typeAssign(self):

        localctx = MT22Parser.TypeAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typeAssign)
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INT, MT22Parser.STRING, MT22Parser.BOOL, MT22Parser.FLOAT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.elementType()
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(MT22Parser.AUTO)
                pass
            elif token in [MT22Parser.ARR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.match(MT22Parser.ARR)
                self.state = 134
                self.dimen()
                self.state = 135
                self.match(MT22Parser.OF)
                self.state = 136
                self.elementType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.INTEGER)
            else:
                return self.getToken(MT22Parser.INTEGER, i)

        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.CM)
            else:
                return self.getToken(MT22Parser.CM, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_dimen




    def dimen(self):

        localctx = MT22Parser.DimenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dimen)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(MT22Parser.LSB)
            self.state = 141
            self.match(MT22Parser.INTEGER)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MT22Parser.CM:
                self.state = 142
                self.match(MT22Parser.CM)
                self.state = 143
                self.match(MT22Parser.INTEGER)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self.match(MT22Parser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MT22Parser.INT, 0)

        def BOOL(self):
            return self.getToken(MT22Parser.BOOL, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_elementType




    def elementType(self):

        localctx = MT22Parser.ElementTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elementType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INT) | (1 << MT22Parser.STRING) | (1 << MT22Parser.BOOL) | (1 << MT22Parser.FLOAT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecVar2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varList(self):
            return self.getTypedRuleContext(MT22Parser.VarListContext,0)


        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def typeAssign(self):
            return self.getTypedRuleContext(MT22Parser.TypeAssignContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decVar2




    def decVar2(self):

        localctx = MT22Parser.DecVar2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_decVar2)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.varList()
            self.state = 154
            self.match(MT22Parser.CL)
            self.state = 155
            self.typeAssign()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def varList(self):
            return self.getTypedRuleContext(MT22Parser.VarListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_varList




    def varList(self):

        localctx = MT22Parser.VarListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_varList)
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.match(MT22Parser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.match(MT22Parser.IDENTIFIER)
                self.state = 159
                self.match(MT22Parser.CM)
                self.state = 160
                self.varList()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decFunc(self):
            return self.getTypedRuleContext(MT22Parser.DecFuncContext,0)


        def bodyFunction(self):
            return self.getTypedRuleContext(MT22Parser.BodyFunctionContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_func




    def func(self):

        localctx = MT22Parser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_func)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.decFunc()
            self.state = 164
            self.bodyFunction()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecFuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.IDENTIFIER)
            else:
                return self.getToken(MT22Parser.IDENTIFIER, i)

        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def LRB(self):
            return self.getToken(MT22Parser.LRB, 0)

        def RRB(self):
            return self.getToken(MT22Parser.RRB, 0)

        def typeAssign(self):
            return self.getTypedRuleContext(MT22Parser.TypeAssignContext,0)


        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def parameter(self):
            return self.getTypedRuleContext(MT22Parser.ParameterContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_decFunc




    def decFunc(self):

        localctx = MT22Parser.DecFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_decFunc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(MT22Parser.IDENTIFIER)
            self.state = 167
            self.match(MT22Parser.CL)
            self.state = 168
            self.match(MT22Parser.FUNCTION)
            self.state = 171
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.AUTO, MT22Parser.INT, MT22Parser.STRING, MT22Parser.BOOL, MT22Parser.FLOAT, MT22Parser.ARR]:
                self.state = 169
                self.typeAssign()
                pass
            elif token in [MT22Parser.VOID]:
                self.state = 170
                self.match(MT22Parser.VOID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 173
            self.match(MT22Parser.LRB)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.OUT) | (1 << MT22Parser.INHERIT) | (1 << MT22Parser.IDENTIFIER))) != 0):
                self.state = 174
                self.parameter()


            self.state = 177
            self.match(MT22Parser.RRB)
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 178
                self.match(MT22Parser.INHERIT)
                self.state = 179
                self.match(MT22Parser.IDENTIFIER)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def typeAssign(self):
            return self.getTypedRuleContext(MT22Parser.TypeAssignContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def parameter(self):
            return self.getTypedRuleContext(MT22Parser.ParameterContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_parameter




    def parameter(self):

        localctx = MT22Parser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.state = 203
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MT22Parser.INHERIT:
                    self.state = 182
                    self.match(MT22Parser.INHERIT)


                self.state = 186
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MT22Parser.OUT:
                    self.state = 185
                    self.match(MT22Parser.OUT)


                self.state = 188
                self.match(MT22Parser.IDENTIFIER)
                self.state = 189
                self.match(MT22Parser.CL)
                self.state = 190
                self.typeAssign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 192
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MT22Parser.INHERIT:
                    self.state = 191
                    self.match(MT22Parser.INHERIT)


                self.state = 195
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MT22Parser.OUT:
                    self.state = 194
                    self.match(MT22Parser.OUT)


                self.state = 197
                self.match(MT22Parser.IDENTIFIER)
                self.state = 198
                self.match(MT22Parser.CL)
                self.state = 199
                self.typeAssign()
                self.state = 200
                self.match(MT22Parser.CM)
                self.state = 201
                self.parameter()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockStmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockStmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_bodyFunction




    def bodyFunction(self):

        localctx = MT22Parser.BodyFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_bodyFunction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 205
            self.blockStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignStmt(self):
            return self.getTypedRuleContext(MT22Parser.AssignStmtContext,0)


        def blockStmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(MT22Parser.IfStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(MT22Parser.ForStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(MT22Parser.WhileStmtContext,0)


        def doWhileStmt(self):
            return self.getTypedRuleContext(MT22Parser.DoWhileStmtContext,0)


        def callStmt(self):
            return self.getTypedRuleContext(MT22Parser.CallStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(MT22Parser.ReturnStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(MT22Parser.BreakStmtContext,0)


        def continueStmt(self):
            return self.getTypedRuleContext(MT22Parser.ContinueStmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_stmt




    def stmt(self):

        localctx = MT22Parser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_stmt)
        try:
            self.state = 217
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 207
                self.assignStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 208
                self.blockStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 209
                self.ifStmt()
                pass
